--- a/style.css
+++ b/style.css
@@ -333,9 +333,8 @@ nav.sticky{
     }
 }
 @media only screen  and (max-width: 1200px){
-    /* large screens and desktops */
     nav{
-        padding: 0 5px;
+        padding: 0 30px;
     }
     nav .logo{
         font-size: 25px;
@@ -346,9 +345,9 @@ nav.sticky{
     }
 }
 @media only screen  and (max-width: 1100px){
-    /* large screens and desktops */
     nav{
         padding: 0 5px;
+        transition: .1s;
     }
     nav .logo{
         font-size: 20px;
@@ -357,9 +356,14 @@ nav.sticky{
         padding:5px 20px;
         font-size: 19px;
     }
+    section{
+        padding: 110px 3% 60;
+    }
+    .home{
+        height: 87vh;
+   }
 }
 @media only screen and  (max-width: 900px){
-    /* laptops and and small screens */
    .hamburger{
         display: block;
         cursor: pointer;
@@ -393,10 +397,25 @@ nav.sticky{
         opacity: 0;
    }
    .nav-home.active ul{
-    opacity: 1;
+        opacity: 1;
    }
    .nav-home ul li a{
-    margin-bottom: 12px;
+        margin-bottom: 12px;
+   }
+   .about{
+        grid-template-columns: 1fr;
+   }
+   .about-image{
+        text-align: center;
+        order: 2;
+   }
+   .about-image img{
+        width: 100%;
+        height: auto;
+        max-width: 100%;
+   }
+   .contact{
+        grid-template-columns: 1fr;
    }
 }
 
