--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ section{
     font-weight: 500;
 }
 .home-text h1{
-    font-size:35px ;
+    font-size:50px ;
     font-weight: 700;
     list-style: 1.1;
     margin: 0 0 8px;
@@ -121,6 +121,7 @@ nav.sticky{
     font-size: 30px;
     line-height: 1;
     font-weight: 900;
+    margin-bottom: 2rem;
 }
 .about-text h3{
     font-size: 25px;
@@ -131,7 +132,7 @@ nav.sticky{
 }
 .about-text p{
     line-height: 1.8;
-    margin-bottom: 4rem;
+    /* margin-bottom: 1rem; */
 }
 .main-text{
     text-align: center;
@@ -154,6 +155,8 @@ nav.sticky{
 }
 .box{
     background: rgb(17, 16, 16);
+    height: 430px;
+    width: 300px;
     padding: 35px 45px;
     border-radius: 8px;
     transition: all .45s ease;
@@ -313,10 +316,12 @@ nav.sticky{
     height: 240px;
 }
 .contact-form .submit{
-    display: inline-block;
     font-size: 16px;
     background: red;
     color: #fefefe;
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: none;
     width: 160px;
     transition: all .45s ease;
     cursor: pointer;
@@ -345,6 +350,9 @@ nav.sticky{
     }
 }
 @media only screen  and (max-width: 1100px){
+    section {
+        padding: 80px 3% 60px; 
+    }
     nav{
         padding: 0 5px;
         transition: .1s;
@@ -364,6 +372,9 @@ nav.sticky{
    }
 }
 @media only screen and  (max-width: 900px){
+    section {
+        padding: 60px 3% 40px; 
+    }
    .hamburger{
         display: block;
         cursor: pointer;
@@ -417,5 +428,44 @@ nav.sticky{
    .contact{
         grid-template-columns: 1fr;
    }
+   .services-content{
+        justify-content: center;
+   }
+   .box{
+    background: rgb(17, 16, 16);
+    height: 300px;
+    width: 250px;
+    padding: 20px 17px;
+    border-radius: 8px;
+    transition: all .45s ease;
+    color: #e8c9c9;
+}
+   .s-icons{
+    font-size: 32px;
+    margin-bottom: 20px;
+    color: #fefefe;
+    }
+    .box h3{
+    font-size: 19px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    }
+    .box p {
+    font-size: 14px;
+    line-height: 1;
+    margin-bottom: 10px;
+    }
+    .portfolio-contents{
+        justify-content: center;
+    }
+    .row img{
+        width: 350px;
+        border-radius: 8px;
+        display: block;
+        transition: transform 0.5;
+    }
+}
+@media only screen and  (max-width: 600px){
+
 }
 
